--- a/incidents-app/package.json
+++ b/incidents-app/package.json
@@ -12,16 +12,19 @@
     "@prisma/client": "^6.15.0",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "prisma": "^6.15.0",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
