--- a/incidents-app/package.json
+++ b/incidents-app/package.json
@@ -10,6 +10,7 @@
     "prisma:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.15.0",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
@@ -20,6 +21,7 @@
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
