--- a/incidents-app/package.json
+++ b/incidents-app/package.json
@@ -7,7 +7,9 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "prisma:seed": "ts-node prisma/seed.ts"
+    "prisma:seed": "ts-node prisma/seed.ts",
+      "vercel-post-build": "npx prisma db push && npx prisma migrate deploy && npx prisma db seed"
+
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
